--- a/app/assets/templates/ore-ui/cards/ore-ui-card.css
+++ b/app/assets/templates/ore-ui/cards/ore-ui-card.css
@@ -35,6 +35,12 @@ body {
     height: 100%;
     margin: 4px 0;
 }
+.card-main .img img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    display: block;
+}
 .card-footer {
     width: 100%;
     height: 52px;
