--- a/app/assets/templates/ore-ui/cards/ore-ui-card.css
+++ b/app/assets/templates/ore-ui/cards/ore-ui-card.css
@@ -16,8 +16,9 @@ body {
     border-image: url(./card-header.png) 4 4 2 4 fill / 4px 4px 2px 4px;
     width: 100%;
     height: 52px;
-    justify-items: center;
-    align-content: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     font-family: "MinecraftFive";
 }
@@ -45,8 +46,9 @@ body {
     width: 100%;
     height: 52px;
     border-image: url(./card-footer.png) 2 2 4 2 fill / 2px 2px 4px 2px;
-    align-content: center;
-    justify-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .card-button {
     height: calc(100% - 8px);
