--- a/app/pages/home/home.css
+++ b/app/pages/home/home.css
@@ -22,9 +22,14 @@
 .home-heading {
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-top: 30px;
+    width: 100%;
+}
+
+.post-input-wrapper {
+    display: flex;
     width: 360px;
-    justify-self: center;
 }
 
 .home-heading .ore-button {
