--- a/app/assets/templates/ore-ui/cards/ore-ui-card.css
+++ b/app/assets/templates/ore-ui/cards/ore-ui-card.css
@@ -21,6 +21,7 @@ body {
     align-items: center;
     text-align: center;
     font-family: "MinecraftFive";
+    image-rendering: pixelated;
 }
 .card-header p {
     margin: auto;
