--- a/app/pages/tools/tools.css
+++ b/app/pages/tools/tools.css
@@ -1,7 +1,12 @@
 .tools-wrap {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 30px 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 360px);
     gap: 15px;
+    justify-content: center;
+    margin: 30px 0;
+}
+.open-button {
+    height: calc(100% - 8px);
+    width: calc(100% - 8px);
+    text-decoration: none;
 }
