--- a/app/tools/color-converter/style.css
+++ b/app/tools/color-converter/style.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 83.7vh;
+    height: 80vh;
 }
 .color-main {
     display: flex;
@@ -38,12 +38,13 @@
     align-items: center;
     background-color: red;
     width: 80%;
+    height: 2.2rem;
 }
 .final-result > input {
-    width: fill;
+    width: 100%;
     padding: 0.5rem;
 }
-.final-result > button {
+#copyColor {
+    height: 100%;
     width: 5rem;
-    padding: 0.5rem;
 }
