--- a/app/tools/color-converter/style.css
+++ b/app/tools/color-converter/style.css
@@ -2,8 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 80vh;
+    height: 80dvh;
 }
 .color-main {
     display: flex;
